# psdik

./: .gitignore  CMakeLists.txt  build.sh  build_debug.sh
config/: config.json.in
docs/: CMakeLists.txt  Doxyfile.in  doxygen-awesome.css
include/: psdik.h  version.h.in
src/: CMakeLists.txt  psdik.cpp
test/: CMakeLists.txt  test_config.json
test/src/: more_test_psdik.cpp
tests/: CMakeLists.txt  run_tests.sh
tests/include/: test_psdik.h
tests/src/: test_psdic.cpp  test_psdik.cpp
